--- a/photoshare/photoshare/CustomCelliPad.xib
+++ b/photoshare/photoshare/CustomCelliPad.xib
@@ -6,7 +6,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="CustomCelliPad" rowHeight="65" id="Mha-vi-cvP" customClass="CustomCelliPad">
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="CustomCelliPad" rowHeight="65" id="Mha-vi-cvP" customClass="CustomCell">
             <rect key="frame" x="0.0" y="0.0" width="768" height="140"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="Mha-vi-cvP" id="unj-ga-dhS">
@@ -47,11 +47,11 @@
                 </subviews>
             </tableViewCellContentView>
             <connections>
-                <outlet property="imageView" destination="Nsr-S4-gR4" id="zHe-VT-ciR"/>
-                <outlet property="joinStatus" destination="A72-Tk-ma5" id="Ind-HN-8ta"/>
-                <outlet property="joinedDate" destination="8l9-4L-vlS" id="mgN-v9-6O9"/>
-                <outlet property="name" destination="8Ze-QJ-fpI" id="3IE-KL-bZp"/>
-                <outlet property="userAmmount" destination="8sf-lp-oXl" id="puN-AU-mva"/>
+                <outlet property="imageView" destination="Nsr-S4-gR4" id="hlh-X4-YmK"/>
+                <outlet property="joinStatus" destination="A72-Tk-ma5" id="hGd-jn-CKe"/>
+                <outlet property="joinedDate" destination="8l9-4L-vlS" id="yo0-4X-8GA"/>
+                <outlet property="name" destination="8Ze-QJ-fpI" id="R9m-bW-bbj"/>
+                <outlet property="userAmmount" destination="8sf-lp-oXl" id="5Iw-DB-CZ0"/>
             </connections>
         </tableViewCell>
     </objects>
